--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/giorgi/Desktop/Django-Packages/venv/bin/python3.9"
+    "python.pythonPath": "/usr/local/bin/python3"
 }
